@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4VisManager.hh,v 1.20 2001-07-11 10:09:16 gunter Exp $
+// $Id: G4VisManager.hh,v 1.21 2001-07-30 23:34:24 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -83,7 +83,6 @@
 #include "G4SceneHandlerList.hh"
 #include "G4Scene.hh"
 #include "G4SceneList.hh"
-#include "G4ViewParameters.hh"
 #include "G4Transform3D.hh"
 #include "G4UImessenger.hh"
 
@@ -130,26 +129,6 @@ class G4VisManager: public G4VVisManager {
 
   friend class G4VisStateDependent;
 
-  // Now classes associated with the old commands...
-  friend class G4VisCommandCameraReset;
-  friend class G4VisCommandClearScene;
-  friend class G4VisCommandClearView;
-  friend class G4VisCommandClearViewAndScene;
-  friend class G4VisCommandCopyAll;
-  friend class G4VisCommandCopyScene;
-  friend class G4VisCommandCopyView;
-  friend class G4VisCommandCreateViewNewScene;
-  friend class G4VisCommandCreateViewNewView;
-  friend class G4VisCommandDeleteScene;
-  friend class G4VisCommandDeleteView;
-  friend class G4VisCommandDrawCurrent;
-  friend class G4VisCommandLightsMoveWithCamera;
-  friend class G4VisCommandRefreshView;
-  friend class G4VisCommandSetCulling;
-  friend class G4VisCommandSetCullCoveredDaughters;
-  friend class G4VisCommandSetCullInvisible;
-  friend class G4VisCommandShowView;
-
 protected: // With description
 
   G4VisManager ();
@@ -180,23 +159,10 @@ public: // With description
   void Initialize ();  // Alias Initialise ().
   G4bool RegisterGraphicsSystem (G4VGraphicsSystem* pSystem);
 
-  //////////////////////////////////////////////////////////////////////
-  // Drawing routines!
-
-  void ClearView ();
-  // Clear visible window of current viewer (both buffers of a double
-  // buffered system).
-
-  void Draw ();
-  // Draw current scene in current view.
-
-  void Show ();
-  // Show current view (initiates post-procesing of graphical
-  // databases for graphics systems which require it.)
-
-  // ///////////////////////////////////////////////////////////////
-  // Now functions for drawing various visualization primitives,
-  // useful for representing hits, digis, etc.
+  /////////////////////////////////////////////////////////////////
+  // Now functions that implement the pure virtual functions of
+  // G4VVisManager for drawing various visualization primitives, useful
+  // for representing hits, digis, etc.
 
   void Draw (const G4Polyline&,
     const G4Transform3D& objectTransformation = G4Transform3D::Identity);
@@ -219,8 +185,9 @@ public: // With description
   void Draw (const G4NURBS&,
     const G4Transform3D& objectTransformation = G4Transform3D::Identity);
 
-  // //////////////////////////////////////////////////////////////////
-  // Now functions for drawing a GEANT4 geometry object.  Note that
+  ////////////////////////////////////////////////////////////////////
+  // Now functions that implement the pure virtual functions of
+  // G4VVisManager for drawing a GEANT4 geometry object.  Note that
   // the 2nd argument overrides any visualization attributes that are
   // associated with the object itself.
 
@@ -234,10 +201,13 @@ public: // With description
     const G4Transform3D& objectTransformation = G4Transform3D::Identity);
 
   ////////////////////////////////////////////////////////////////////////
-  // Administration routines.
+  // Now other pure virtual functions of G4VVisManager...
 
-  void CopyViewParameters ();
-  // Copy view parameters of current viewer into current view parameters.
+  void GeometryHasChanged ();
+  // Used by run manager to notify change.
+
+  ////////////////////////////////////////////////////////////////////////
+  // Administration routines.
 
   void CreateSceneHandler (G4String name = "");
   // Creates scene handler for the current system.
@@ -251,26 +221,12 @@ public: // With description
   void DeleteCurrentViewer ();
   // Leaves current scene and view undefined!
 
-  void GeometryHasChanged ();
-  // Used by run manager to notify change.
-
-  void RefreshCurrentView  ();
-  // Soft clear, then redraw.
-
 private:
 
   void EndOfEvent ();
   // This is called on change of state (G4ApplicationState).  It is
   // used to draw hits and trajectories if included in the current
   // scene at the end of event, as required.
-
-public:
-
-  // These can go when OLD STYLE commands go...
-  void PrintCurrentSystem  () const;
-  void PrintCurrentSystems () const;
-  void PrintCurrentScene   () const;
-  void PrintCurrentView    () const;
 
 public: // With description
 
@@ -285,7 +241,6 @@ public: // With description
   G4Scene*                     GetCurrentScene             () const;
   G4VSceneHandler*             GetCurrentSceneHandler      () const;
   G4VViewer*                   GetCurrentViewer            () const;
-  const G4ViewParameters&      GetCurrentViewParameters    () const;
   const G4GraphicsSystemList&  GetAvailableGraphicsSystems ();
   // The above is non-const because it checks and updates the List by
   // calling RegisterGraphicsSystems() if no graphics systems are
@@ -293,16 +248,18 @@ public: // With description
   const G4SceneHandlerList&    GetAvailableSceneHandlers   () const;
   const G4SceneList&           GetSceneList                () const;
   G4int                        GetVerboseLevel             () const;
+  void  GetWindowSizeHint (G4int& xHint, G4int& yHint) const;
+  // Note: GetWindowSizeHint information is returned via the G4int& arguments.
   void              SetCurrentGraphicsSystemAndCreateViewer
                                                 (G4VGraphicsSystem* pSystem);
   void              SetCurrentGraphicsSystem    (G4VGraphicsSystem* pSystem);
   void              SetCurrentScene             (G4Scene*);
   void              SetCurrentSceneHandler      (G4VSceneHandler* pScene);
   void              SetCurrentViewer            (G4VViewer* pView);
-  G4ViewParameters& SetCurrentViewParameters    ();  // Returns lvalue.
   G4SceneHandlerList& SetAvailableSceneHandlers ();  // Returns lvalue.
   G4SceneList&      SetSceneList                ();  // Returns lvalue.
   void              SetVerboseLevel             (G4int vLevel);
+  void              SetWindowSizeHint           (G4int xHint, G4int yHint);
 
 
   /////////////////////////////////////////////////////////////////////
@@ -316,12 +273,6 @@ public: // With description
   // Returns zero if not found.  Can use long or short name, but find
   // is done on short name.
 
-  G4bool IsValidView ();
-  // True if view is valid.  Prints messages and sanitises varoius data.
-
-  static void PrintCommandDeprecation(const G4String&);
-  // Temporary deprecation printing.
-
 protected:
 
   virtual void RegisterGraphicsSystems () = 0;
@@ -330,6 +281,9 @@ protected:
   void PrintInstalledGraphicsSystems   () const;
   void PrintAvailableGraphicsSystems   () const;
   void PrintInvalidPointers            () const;
+  G4bool IsValidView ();
+  // True if view is valid.  Prints messages and sanitises various data.
+
   static G4VisManager*  fpInstance;         // Pointer to single instance.
   G4bool                fInitialised;
   G4VGraphicsSystem*    fpGraphicsSystem;   // Current graphics system.
@@ -339,11 +293,11 @@ protected:
   G4GraphicsSystemList  fAvailableGraphicsSystems;
   G4SceneList           fSceneList;
   G4SceneHandlerList    fAvailableSceneHandlers;
-  G4ViewParameters      fVP;                // Current viewing parameters.
   G4int                 fVerbose;           // Verbosity level 0-10.
   G4std::vector<G4UImessenger*> fMessengerList;
   G4std::vector<G4UIcommand*>   fDirectoryList;
   G4VisStateDependent*  fpStateDependent;   // Friend state dependent class.
+  G4int fWindowSizeHintX, fWindowSizeHintY; // For viewer construction.
 
 };
 
