@@ -1,4 +1,4 @@
-$Id: History,v 1.142 2001-07-27 22:32:51 johna Exp $
+$Id: History,v 1.143 2001-07-30 23:34:17 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,15 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+30th July 2001  John Allison  (vis-V03-02-09)
+- Eliminated view parameters from G4VisManager.  Now, each view maintains its
+  own parameters.  Can be copied from one view to another with:
+    /vis/viewer/set/all <from-viewer-name>
+    Copies view parameters from from-viewer to current viewer.
+    Affects current viewer.
+- Removed redundant methods from G4VisManager, mostly to do with old-style
+  commands.
 
 27th July 2001  John Allison  (vis-V03-02-08)
 - Needs config-V03-02-01.
